chapter02/grammar.leg
%{
#include <stdio.h>
#include "ae.h"

#define YYSTYPE Expr

static AE* tree;

%}

Expr = - ae:AE -            { tree = (AE*) ae; }

AE = Number
   | LBRACE
     o:OP
     l:AE
     r:AE
     RBRACE                 {
                              AEOp* op = malloc(sizeof(AEOp));
                              op->type = o;
                              op->lhs  = (AE*) l;
                              op->rhs  = (AE*) r;
                              $$ = (Expr) op;
                            }

Number = < MINUS? [0-9]+ > -       {
                              AENum* num = malloc(sizeof(AENum));
                              num->type = AE_NUM;
                              num->val = atoi(yytext);
                              $$ = (Expr) num;
                            }

OP     = ( PLUS | MINUS ) - 
PLUS   = '+'                { $$ = AE_ADD; }
MINUS  = '-'                { $$ = AE_SUB; }
LBRACE = '{' -
RBRACE = '}' -

- = [ \t\n]*

%%

AE* AE_parse() {
  while (yyparse())
    ;

  return tree;
}
